pkg/tests/ingress-namespace-2.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-roastery
  namespace: factory-ns
spec:
  tls:
  - hosts:
    - cafe.contoso.com
    secretName: secret-token-ath3x
  rules:
  - host: cafe.contoso.com
    http:
      paths:
      - path: /
        backend:
          serviceName: roastery-service
          servicePort: 80
